--- a/packages/video_player/video_player_android/android/build.gradle
+++ b/packages/video_player/video_player_android/android/build.gradle
@@ -1,6 +1,8 @@
 group 'io.flutter.plugins.videoplayer'
 version '1.0-SNAPSHOT'
-def args = ["-Xlint:deprecation","-Xlint:unchecked","-Werror"]
+// TODO: Remove when exoplayer gets updated to 3.18.0
+//def args = ["-Xlint:deprecation","-Xlint:unchecked","-Werror"]
+def args = ["-Xlint:deprecation","-Xlint:unchecked"]
 
 buildscript {
     repositories {
@@ -46,6 +48,7 @@ android {
         implementation 'com.google.android.exoplayer:exoplayer-core:2.17.1'
         implementation 'com.google.android.exoplayer:exoplayer-hls:2.17.1'
         implementation 'com.google.android.exoplayer:exoplayer-dash:2.17.1'
+        implementation 'com.google.android.exoplayer:exoplayer-ui:2.17.1'
         implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.17.1'
         testImplementation 'junit:junit:4.12'
         testImplementation 'androidx.test:core:1.3.0'
