--- a/packages/video_player/video_player/pubspec.yaml
+++ b/packages/video_player/video_player/pubspec.yaml
@@ -24,13 +24,25 @@ dependencies:
     sdk: flutter
   html: ^0.15.0
   video_player_android:
-    path: ../video_player_android
+    git:
+      url: https://github.com/gismart/flutter-plugins.git
+      path: packages/video_player/video_player_android
+      ref: video_player-gismart
   video_player_avfoundation:
-    path: ../video_player_avfoundation
+    git:
+      url: https://github.com/gismart/flutter-plugins.git
+      path: packages/video_player/video_player_avfoundation
+      ref: video_player-gismart
   video_player_platform_interface:
-    path: ../video_player_platform_interface
+    git:
+      url: https://github.com/gismart/flutter-plugins.git
+      path: packages/video_player/video_player_platform_interface
+      ref: video_player-gismart
   video_player_web:
-    path: ../video_player_web
+    git:
+      url: https://github.com/gismart/flutter-plugins.git
+      path: packages/video_player/video_player_web
+      ref: video_player-gismart
 
 dev_dependencies:
   flutter_test:
