--- a/packages/video_player/video_player_web/pubspec.yaml
+++ b/packages/video_player/video_player_web/pubspec.yaml
@@ -21,7 +21,11 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  video_player_platform_interface: ">=4.2.0 <6.0.0"
+  video_player_platform_interface:
+    git:
+      url: https://github.com/gismart/flutter-plugins.git
+      path: packages/video_player/video_player_platform_interface
+      ref: video_player-gismart
 
 dev_dependencies:
   flutter_test:
