--- a/packages/video_player/video_player_android/example/pubspec.yaml
+++ b/packages/video_player/video_player_android/example/pubspec.yaml
@@ -17,7 +17,10 @@ dependencies:
     # the parent directory to use the current plugin's version.
     path: ../
   video_player_platform_interface:
-    path: ../../video_player_platform_interface
+    git:
+      url: https://github.com/gismart/flutter-plugins.git
+      path: packages/video_player/video_player_platform_interface
+      ref: video_player-gismart
 
 dev_dependencies:
   flutter_driver:
